--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -56,7 +56,7 @@
                     <li><a routerLink="/products" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Product</a></li>       
                     <li><a routerLink="/targetTypes" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Target Type</a></li>                
                     <li><a routerLink="/states" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">State</a></li>                  
-                    <li><a routerLink="/pellets" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Pelle</a></li>
+                    <li><a routerLink="/pellets" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Pellet</a></li>
                     <li><a routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Category</a></li>
                     <li><a routerLink="/carriers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Carrier</a></li>
                     <li><a routerLink="/opacities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Opacity</a></li>
