--- a/PlasticManufacturer.Client/media-768.css
+++ b/PlasticManufacturer.Client/media-768.css
@@ -1,4 +1,4 @@
-﻿@media (min-width: 768px) and (max-width: 1024px) {
+﻿@media (max-width: 768px)  {
 
     .margin-adjust {
         margin-right: 0px;
