folders cdefault, formula, markup

--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -62,6 +62,11 @@
                     <li><a routerLink="/opacities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Opacity</a></li>
                     <li><a routerLink="/packagings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Packing</a></li>                                       
                     <li><a routerLink="/cities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">City</a></li>
+                    <li><a routerLink="/rawMaterials" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Raw Material</a></li>
+                    <li><a routerLink="/defaults" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Default</a></li>
+                    <li><a routerLink="/markups" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Markup</a></li>
+                    <li><a routerLink="/formulas" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Formula</a></li>
+
                 </ul>
             </li>
             <li>
