--- a/PlasticManufacturer.Client/app/rawMaterials/rawMaterial.component.html
+++ b/PlasticManufacturer.Client/app/rawMaterials/rawMaterial.component.html
@@ -21,15 +21,15 @@
                             <div class="form-group">
                                 <div class="col">
                                     <label class="control-label col-md-2" for="Code">Code</label>
-                                    <input class="form-control text-box single-line" name="Code" type="text"  />
+                                    <input class="form-control text-box single-line" formControlName="code" name="Code" type="text"  />
                                 </div>
                                 <div class="col">
                                     <label class="control-label col-md-2" for="Name">Name</label>
-                                    <input class="form-control text-box single-line"  id="Name" name="Name" type="text"  />
+                                    <input class="form-control text-box single-line"  id="Name"formControlName="name" name="Name" type="text"  />
                                 </div>
                                 <div class="col">
                                     <label class="control-label col-md-2" for="Description">Description</label>
-                                    <input class="form-control text-box single-line" id="Description"  name="Description" type="text"  />
+                                    <input class="form-control text-box single-line" id="Description" formControlName="description" name="Description" type="text"  />
                                 </div>
                             </div>
                         </div>
@@ -40,15 +40,15 @@
                             <div class="form-group">
                                 <div class="col">
                                     <label class="control-label col-md-2" for="Notes">Notes</label>
-                                    <input class="form-control text-box single-line" id="Notes" name="Notes" type="text"  />
+                                    <input class="form-control text-box single-line" id="Notes" formControlName="notes" name="Notes" type="text"  />
                                 </div>
                                 <div class="col">
                                     <label class="control-label col-md-2" for="ChemicalName">ChemicalName</label>
-                                    <input class="form-control text-box single-line" id="ChemicalName" name="ChemicalName" type="text"  />
+                                    <input class="form-control text-box single-line" id="ChemicalName" formControlName="chemicalName" name="ChemicalName" type="text"  />
                                 </div>
                                 <div class="col">
                                     <label class="control-label col-md-2" for="Status">Status</label>
-                                    <select name="Status" id="Status" class="form-control" style="width:200px">
+                                    <select name="Status" id="Status" formControlName="status" class="form-control" style="width:200px">
                                         <option ></option>
                                         <option value="true">Active</option>
                                         <option value="false">Inactive</option>
