--- a/PlasticManufacturer.Client/app/rawMaterials/rawMaterial.component.html
+++ b/PlasticManufacturer.Client/app/rawMaterials/rawMaterial.component.html
@@ -48,7 +48,7 @@
                                 </div>
                                 <div class="col">
                                     <label class="control-label col-md-2" for="Status">Status</label>
-                                    <select name="Status" id="Status" formControlName="status" class="form-control" style="width:200px">
+                                    <select name="Status" id="Status"  class="form-control" style="width:200px">
                                         <option ></option>
                                         <option value="true">Active</option>
                                         <option value="false">Inactive</option>
