correcao tela de customer

--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -42,6 +42,8 @@
                             <li><a routerLink="/customerContacteds" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contacted</a></li>
                             <li><a routerLink="/secondLabels" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Second Label</a></li>
                             <li><a routerLink="/freights" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Freight</a></li>
+                            <li><a routerLink="/customerAddresses" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Customer Address</a></li>
+                            <li><a routerLink="/addressTypes" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Address Types</a></li>
                         </ul>
                     </li>
                     <li>
@@ -66,6 +68,7 @@
                     <li><a routerLink="/defaults" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Default</a></li>
                     <li><a routerLink="/markups" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Markup</a></li>
                     <li><a routerLink="/formulas" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Formula</a></li>
+                    <li><a routerLink="/operationTypes" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Operation Type</a></li>
 
                 </ul>
             </li>
