--- a/PlasticManufacturer.Client/app/rawMaterials/rawMaterial.component.html
+++ b/PlasticManufacturer.Client/app/rawMaterials/rawMaterial.component.html
@@ -48,8 +48,8 @@
                                 </div>
                                 <div class="col">
                                     <label class="control-label col-md-2" for="Status">Status</label>
-                                    <select name="Status" id="Status"  class="form-control" style="width:200px">
-                                        <option ></option>
+                                    <select name="Status" id="Status" formControlName="status" class="form-control" style="width:200px">
+                                        <option></option>
                                         <option value="true">Active</option>
                                         <option value="false">Inactive</option>
                                     </select>
@@ -72,9 +72,14 @@
                                 </div>
                                 <div class="col">
                                     <label class="control-label col-md-2" for="Category">Category</label>
-
-                                    <select name="Category.Id" id="Category_Id" class="form-control" style="width: 200px">
-                                        <option ></option>
+                                    <select class="form-control" formControlName="category_Id" style="width: 200px">
+                                        <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
+                                    </select>
+                                </div>
+                                <div class="col">
+                                    <label class="control-label col-md-2" for="Operation">Operation Type</label>
+                                    <select class="form-control" formControlName="operationType_Id" style="width: 200px">
+                                        <option *ngFor="let operation of operationTypes" [value]="operation.id">{{ operation.name }}</option>
                                     </select>
                                 </div>
                             </div>
