correcao da tela do pellet e customer

--- a/PlasticManufacturer.Client/app/customerAddresses/customerAddress.component.html
+++ b/PlasticManufacturer.Client/app/customerAddresses/customerAddress.component.html
@@ -23,12 +23,12 @@
                                 <div class="fields-bar">
                                     <div class="margin-adjust">
                                         <div class="form-group">
-                                             <!--<div class="col small pdlft">
+                                             <div class="col small pdlft">
                                                 <span class="label">Customer:</span>
-                                                <select class="form-control" formControlName="customer_Id">
-                                                    <option *ngFor="let addressType of addressTypes" [ngValue]="addressType.id">{{ addressType.name }}</option>
+                                                <select class="form-control" formControlName="customers_Id">
+                                                    <option *ngFor="let customer of customer" [ngValue]="customer.id">{{ customer.name }}</option>
                                                 </select>
-                                            </div>-->
+                                            </div>
 
                                         </div>
 
