--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -61,6 +61,7 @@
                     <li><a routerLink="/pellets" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Pellet</a></li>
                     <li><a routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Category</a></li>
                     <li><a routerLink="/carriers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Carrier</a></li>
+                    <li><a routerLink="/shippingMethods" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Shipping Method</a></li>
                     <li><a routerLink="/opacities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Opacity</a></li>
                     <li><a routerLink="/packagings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Packing</a></li>                                       
                     <li><a routerLink="/cities" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">City</a></li>
