alteracao customer shipviaaccount

--- a/PlasticManufacturer.Client/app/Customers/customer.component.html
+++ b/PlasticManufacturer.Client/app/Customers/customer.component.html
@@ -353,6 +353,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <button (click)="addLair()" type="button">Add Shipping Method</button>
                             </div>
                         </mat-tab>
                     </div>
